[package]
name = "verithra-verifier"
version = "0.1.0"
edition = "2024"
authors = ["Verithra Protocols"]
description = "Public verification engine for Verithra Proof of Alpha cryptographic performance claims."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
